# scop

./: .gitignore  Cargo.toml  build.rs
assets/shaders/: triangle.frag  triangle.vert
libs/math/: Cargo.toml
libs/math/src/: lib.rs
libs/math/src/matrix/: matrix2.rs  matrix3.rs  matrix4.rs  mod.rs
libs/math/src/vector/: mod.rs  vector2.rs  vector3.rs  vector4.rs
src/: camera.rs  cube.rs  main.rs  model.rs  render_gl.rs  resources.rs  scene.rs  square.rs  triangle.frag  triangle.rs  triangle.vert
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs  texture.rs  viewport.rs
