[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.24.6"
math = { path = "libs/math" }

[dependencies.sdl2]
version = "0.35.0"
features = ["bundled", "static-link"]

[build-dependencies]
walkdir = "2.1"
